<resources>
    <string name="app_name">Tracking My Pantry</string>
    <string name="account_type">lam21.modron.network</string>
    <string name="title_activity_browse_products_list_type">BrowseProductsListTypeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading ...</string>
    <string name="barcode_scanner_hint">Point your camera at a barcode</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in_existing">Sign in using an existing account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_login">"You are now logged in as %1$s"</string>
    <string name="welcome_register">Welcome %1$s</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="signIn_failed">"Login failed using the provided credentials"</string>
    <string name="signUp_failed">"Unable to sign up using the provided credentials, change username or email"</string>
    <string name="auth_failed_network">"Unable to authenticate due to a network error"</string>
    <string name="auth_failed_unknown">"Unable to authenticate due to an expected error"</string>
    <string name="error_generic_failed_auth">"Unable %1$s due to a failed authentication"</string>
    <string name="error_generic_failed_network">"Unable %1$s due to the inability to communicate with the server caused by a network error"</string>
    <string name="error_generic_failed_unknown">"Unable %1$s due to an expected error"</string>
    <string name="error_msg_type_cause">"%1$s: %2$s"</string>
    <string name="error_type_network">Network error</string>
    <string name="error_type_remote">Server error</string>
    <string name="error_type_authentication">Authentication Error</string>
    <string name="error_type_unhandled">Unexpected error</string>
    <string name="error_cause_unable_communicate">Unable to connect to server</string>
    <string name="error_cause_bad_data">Bad data provided</string>
    <string name="error_cause_not_logged">You need to login first</string>
    <string name="error_cause_unable_do_operation">Unable complete the operation</string>


    <string name="to_authenticate">"to authenticate"</string>
    <string name="to_get_data">"to get data"</string>
    <string name="error_unable_to_take_picture">Error: Unable to take a picture</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_products">My products</string>
    <string name="menu_signin">Sign in</string>

    <!-- pantries -->
    <string name="pantries_no_product_available">There are no available products</string>
    <string name="pantries_no_stored_product">There are no stored products</string>
    <!-- register product -->
    <string name="menu_register_product_action_scan">Scan barcode</string>
    <string name="menu_register_product_action_digit">Digit barcode</string>
    <string name="register_product_title">Add new products to a pantry</string>
    <!-- product register form -->
    <string name="product_expire_date">Expire date</string>
    <string name="product_pantry_name">Pantry name</string>
    <string name="product_cost">Cost</string>
    <string name="product_purchase_date">Purchase date</string>
    <string name="product_purchase_location">Purchase location</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_unconsumed_amount">Unconsumed amount</string>
    <string name="product_groups_quantity_lefts">Remaining: </string>
    <string name="action_register_product">Register product</string>
    <string name="action_edit_product">Edit product details</string>
    <string name="action_add_product">Add product articles</string>
    <string name="action_next_product_section">Continue</string>
    <string name="pantries_no_pantry_available">there is no pantry that contains this product</string>
    <string name="place_no_purchases_available">There isn\'t any registered place where you bought this product</string>
    <string name="product_register_complete">Registered product successfully</string>
    Register product successfully
    <!-- product suggestions -->
    <string name="suggested_products_toolbar_title">Suggested products</string>
    <string name="suggested_products_list_description">Select the product that you think best matches your product.</string>
    <string name="register_product_name">Product name</string>
    <string name="register_product_description">Product description</string>
    <string name="register_product_take_photo">Take a photo of the product</string>
    <string name="register_product_tags">Assign custom tags</string>
    <string name="register_product_warning_product_replace">If you search for and then select another product of this type, you will replace the already registered information of this product.\nDo you want to continue ?</string>
    <string name="barcode">Barcode</string>
    <string name="title_productinpantries_list">ProductsInPantries</string>
    <string name="title_productinpantries_detail">ProductInPantries Detail</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="tab_product_details">Product details</string>
    <string name="tab_product_instance_details">Articles details</string>
    <string name="tab_product_purchase_details">Purchase details</string>
    <string name="create_as_new">Add as new</string>
    <!-- menu options -->
    <string name="option_remove_entry">Remove</string>
    <string name="option_move_to_pantry">Move to</string>
    <string name="option_consume">Consume</string>
    <string name="option_rename">Rename</string>

    <string name="pantry_action_rename_description">Edit the pantry name</string>
    <string name="pantry_name_already_exists">This name already exists</string>
    <string name="pantry_action_remove">Delete pantry</string>
    <string name="pantry_action_remove_description">This operation will delete all articles of each product contained in this pantry.\nAre you sure you want to continue ?</string>
    <string name="product_action_remove">Delete product</string>
    <string name="product_action_remove_description">This operation will delete all the information of this product and all its articles contained in each pantry.\nAre you sure you want to continue ?</string>
    <string name="product_entry_removed_from_pantry">Product entry removed from the pantry</string>
    <string name="action_undo">Undo</string>
    <string name="action_retry">Retry</string>
    <string name="product_expiration">Product expiration</string>
    <string name="location_inside_pantry">In \"%1$s\" pantry</string>

    <string name="title_activity_auth">AuthActivity</string>

    <string name="description_account_required">Please, choose or create an account which you want to use the application with </string>
    <string name="error_account_required">An account is required to use the application</string>

    <string name="rationale_title_feature">App feature</string>
    <string name="rationale_msg_features_calendar">The app can add reminders to your calendar to let you know when each product expires.\nThis feature requires to access to the calendar: if you want to use it, please allow the app to access the calendar on next prompt</string>
    <string name="rationale_msg_features_scan">"The app can scan a barcode directly with your device's camera.\nThis feature requires camera access: if you want to enable scanning, allow the app to access the camera on the next prompt"</string>
    <string name="rationale_msg_features_take_photo">"This feature requires camera access: if you want to take a photo, allow the app to access the camera at the next request"</string>
    <string name="features_expiration_reminders">Product expiration reminders</string>
    <string name="features_calendar_disabled">The product expiration reminders are disabled</string>
    <string name="features_calendar_disabled_cause_permissions">The product expiration reminders are disabled because calendar access permissions are required</string>

    <!-- Preference Titles -->
    <string name="feature_reminders_header">Product expiration reminders</string>
    <string name="feature_expiration_reminders_days_before">Remind me before</string>
    <string name="feature_expiration_reminders_days_before_unit">\tDays</string>
    <string name="feature_expiration_reminders_time">Remind time</string>

    <string name="pantries">Pantries</string>
    <string name="pantries_default_pantry_name">Shopping bag</string>
    <string name="product_section_pantries">@string/pantries</string>
    <string name="product_section_pantry_overview">Pantry content</string>
    <string name="product_section_product_overview">Product overview</string>
    <string name="product_section_edit_product_details">Edit product details</string>
    <string name="product_section_purchase_places">Purchase places</string>
    <string name="product_section_purchase_places_overview">Purchases history overview</string>

    <string name="setup_filter_options">Setup the filter options</string>

    <string name="register_product_pick_product">Pick a product</string>
    <string name="field_error_empty">Field can\'t be empty</string>
    <string name="form_error_invalid">A field is not valid</string>

    <string name="dialog_title">%1$s: %2$s</string>
</resources>