<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/expireDateHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/product_expire_date" />

    <TextView
        android:id="@+id/amountLeftHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/product_unconsumed_amount" />

    <TextView
        android:id="@+id/quantityHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="2"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/product_quantity" />
</TableRow>