<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/barcodeInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:hint="@string/barcode"
        app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner"
        app:endIconMode="custom"
        app:startIconDrawable="?android:attr/actionModeWebSearchDrawable">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="194dp">

        <ImageView
            android:id="@+id/photoPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/register_product_take_photo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_product_placeholder" />

        <ImageButton
            android:id="@+id/photoPreviewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_camera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/text_margin"
        android:dividerPadding="@dimen/text_margin"
        android:hint="@string/register_product_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/text_margin"
        android:dividerPadding="@dimen/text_margin"
        android:hint="@string/register_product_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textImeMultiLine"
            android:lines="3"
            android:maxLines="5"
            android:nestedScrollingEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>