<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?attr/dividerHorizontal"
    android:dividerPadding="@dimen/text_margin"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:dividerPadding="@dimen/text_margin"
        android:hint="@string/product_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_expire_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:hint="@string/product_expire_date"
        app:endIconDrawable="@android:drawable/ic_menu_today"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate_register_product_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_pantry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_pantry_name"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/product_pantry_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="0"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>