<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/barcodeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:hint="@string/barcode"
            app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner"
            app:endIconMode="custom"
            app:startIconDrawable="?android:attr/actionModeWebSearchDrawable">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noProductForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_product_pick_product"
            app:icon="@drawable/ic_baseline_product_placeholder"></com.google.android.material.button.MaterialButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/productForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">


        <RelativeLayout
            android:id="@+id/productPreviewOuterContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp">

            <LinearLayout
                android:id="@+id/productPreviewInnerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:orientation="vertical" />

            <ImageButton
                android:id="@+id/discardProductBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:elevation="1dp"
                app:srcCompat="@android:drawable/btn_dialog" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/text_margin"
            android:hint="@string/register_product_tags"
            app:endIconMode="dropdown_menu"

            app:startIconDrawable="@drawable/ic_baseline_tag">

            <com.hootsuite.nachos.NachoTextView
                android:id="@+id/chips_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:paddingHorizontal="@dimen/text_margin"
                android:paddingVertical="@dimen/default_vertical_padding" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>